Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-437

HTTP header missing soap action on client call

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.95
    • 0.96
    • transport/http
    • None

    Description

      From Axis2C 0.95 onwards using AXIS2_OPTIONS_SET_ACTION in client code does not set the SOAPAction HTTP header.
      On invocation, the following HTTP header is sent.

      POST /stockquote.asmx HTTP/1.1
      User-Agent: Axis2/C
      SOAPAction: ""

      This causes SOAP 1.1 services that depend on this header to fail, such as the services from www.webservicex.net

      Attachments

        1. Axis2c_HTTPSOAPAction.patch
          2 kB
          Andrew Borley

        Activity

          People

            samisa Don Samisa Abeysinghe
            ajborley Andrew Borley
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: