modules/core/transport/http/sender/http_transport_sender.c
@@ -578,14 +578,14 @@ axis2_http_transport_sender_write_message(
     AXIS2_PARAM_CHECK(env->error, om_output, AXIS2_FAILURE);
 
     url = AXIS2_ENDPOINT_REF_GET_ADDRESS(epr, env);
-    /*hack if (NULL == soap_action || 0 == AXIS2_STRLEN(soap_action))
-    {
-        soap_action = AXIS2_MSG_CTX_GET_WSA_ACTION(msg_ctx, env);
-    }*/
+    
+    soap_action = AXIS2_MSG_CTX_GET_SOAP_ACTION(msg_ctx, env);
+    
     if (NULL == soap_action)
     {
         soap_action = "";
     }
+    
     if (AXIS2_TRUE == AXIS2_MSG_CTX_GET_DOING_REST(msg_ctx, env))
     {
         axiom_node_t *data_out = NULL;
