samples/user_guide/clients/echo_blocking_soap11.c
@@ -53,6 +53,7 @@ int main(int argc, char** argv)
     options = axis2_options_create(env);
     AXIS2_OPTIONS_SET_TO(options, env, endpoint_ref);
     AXIS2_OPTIONS_SET_SOAP_VERSION(options, env, AXIOM_SOAP11);
+    AXIS2_OPTIONS_SET_SOAP_ACTION(options, env, "http://ws.apache.org/axis2/c/samples/echo/soap_action");
 
     /* Set up deploy folder. It is from the deploy folder, the configuration is picked up
      * using the axis2.xml file.
